Prevent facets from overlapping with footer

--- a/app/Resources/scss/sections/_footer.scss
+++ b/app/Resources/scss/sections/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     @extend %clearfix;
     background: $white;
+    clear: both;
     max-width: $site-width;
     padding: ($grid * 1.5) ($grid / 2) ($grid / 2);
     position: relative;
